# osint_tool

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ATTRIBUTIONS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.causal.yml  docker-compose.corporate.yml  docker-compose.datasets.yml  docker-compose.gdelt.yml  docker-compose.production.yml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  data_source.yml
.github/workflows/: api-health.yml  ci.yml  codespace-prebuild.yml  pr-validation.yml  release.yml  scheduled-health.yml  security.yml
ai/: aios.yaml  constitution.md
ai/components/: analysis-services.md  api.md  data-model.md  deployment.md  frontend.md  graph-processor.md  ingestion-workers.md  tests.md  worldfish.md
api/: Dockerfile  main.py  requirements.txt
api/models/: __init__.py  ais.py  entities.py  uas.py
api/routers/: analytics.py  uas.py  vessels.py  websocket.py
api/services/: auth.py  metrics.py
community/: submission_validator.py
configs/: elasticsearch-production.yml  elasticsearch.yml  memgraph-production.conf  memgraph.conf  postgresql-production.conf  redpanda-console.yaml
configs/antigravity-agents/: causal-analyst-agent.json  humanitarian-ewa-agent.json  market-intel-agent.json  worldfish-trigger-agent.json
configs/keycloak/: mda-realm.json
configs/prometheus/: prometheus.yml
configs/traefik/: traefik.yml
data-governance/: retention-policy.yaml
docker/postgres/: Dockerfile
docs/: expansion-6-counter-uas-full.md  expansion-6-counter-uas.md
docs/cypher/: mda-intel-queries.cypher
frontend/kepler-gl/: index.html  package.json  vite.config.js
k8s/: api.yaml  memgraph.yaml  namespace.yaml  postgres.yaml  secrets.yaml
ontology/: mda-causal.ttl  mda-corporate-ownership.ttl
processors/graph/: Dockerfile  correlator.py  dlq_processor.py  event_processor.py  graph_consumer.py  memgraph_transform.py  prediction_transform.py  reconciliation.py  requirements.txt
schema/graph/: causal-schema.cypher  corporate-ownership-schema.cypher  memgraph-init.cypher  predictions-schema.cypher  reconciliation-schema.cypher
schema/relational/: causal-schema.sql  corporate-schema.sql  postgis-init.sql  postgres-init.sql  predictions-schema.sql
scripts/: airgap-export.sh  create-causal-kafka-topics.sh  create-corporate-topics.sh  create-dataset-topics.sh  create-gdelt-topics.sh  create-kafka-topics.sh  mage-analytics-queries.cypher  setup-elasticsearch-indices.sh  setup-memgraph-streams.cypher  test-all-ingesters.sh  verify-system.sh
services/atak_overlay/: Dockerfile  publisher.py
services/causal_extractor/: Dockerfile  cross_domain_matcher.py  granger_analyzer.py  llm_extractor.py  requirements.txt  rule_based.py
services/causal_graph_learner/: Dockerfile  learner.py
services/cot-publisher/: cot_publisher.py
services/entity-resolution/: Dockerfile  requirements.txt  vessel_resolution.py
services/es-sync/: Dockerfile  es_sync.py
services/geoserver-sync/: geoserver_setup.py
services/humanitarian_monitor/: crisis_predictor.py  hdx_worker.py  reliefweb_worker.py
worldfish/: Dockerfile  PREDICTION_CONTRACT.md  README.md  __main__.py  contract.py  environments.py  memory.py  persona_generator.py  prediction.py  publisher.py  requirements.txt  seed_extractor.py  simulation_engine.py
(+165 files in other folders)
